force-app/main/default/objects/Master__c/Master__c.object-meta.xml
<CustomObject>
    <label>Master</label>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>