force-app/main/default/objects/Master__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <description></description>
    <inlineHelpText></inlineHelpText>
    <label>Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>