force-app/main/default/objects/Master__c/fields/Metadata_Formula__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Formula__c</fullName>
    <formula>$CustomMetadata.Formula_Metadata__mdt.X2020.Boolean__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Metadata Formula</label>
    <type>Checkbox</type>
</CustomField>